--- a/healthyo.html
+++ b/healthyo.html
@@ -21,7 +21,7 @@
       <h1 class="display-4 fw-bold">Health Emergency Detection</h1>
       <p class="lead">Monitor your health and get real-time emergency alerts</p>
       <a href="#healthCheck" class="btn btn-light btn-lg">Check Your Health</a><br><br>
-      <a href="C:\Users\mmoha\OneDrive\Desktop\uiapp.html" class="btn btn-light btn-lg">Your Information</a>
+      <a href="C:\Users\mmoha\OneDrive\Desktop\uiapp.html" class="btn btn-light btn-lg">Your Profile</a>
     </div>
   </section>
 
@@ -42,7 +42,9 @@
                   <label for="bloodPressure" class="form-label">Blood Pressure (mmHg)</label>
                   <input type="text" class="form-control" id="bloodPressure" placeholder="e.g. 120/80" required>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Check Health Status</button>
+                <button type="submit" class="btn btn-primary w-100">Check Health Status</button><br><br>
+                                <a href="https://www.google.com/maps/search/nearby+hospitals/@12.9098484,77.5734041,14z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI0MTEyNC4xIKXMDSoASAFQAw%3D%3D " class="btn btn-primary w-100" >Nearby Hospitals</a>
+
               </form>
               <div id="result" class="mt-4"></div>
 
